gerado doc para listar todos os products
